apps/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: <NAMESPACE>
  name: api-deployment
  labels:
    app: synple-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synple-api
  template:
    metadata:
      labels:
        app: synple-api
    spec:
      dnsPolicy: Default
      containers:
        - name: synple-api
          image: virtuatable/modusynth-api:<VERSION>
          args:
            - web
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: kubeconfig
              mountPath: /configurations
              readOnly: true
      volumes:
        - name: kubeconfig
          secret:
            secretName: kubeconfig
