apps/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: <NAMESPACE>
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$<TARGET>
  labels:
    app: synple-api
spec:
  tls:
    - secretName: synple-app
  rules:
    - http:
        paths:
          - path: <PATH>
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 443
